--- a/src/style.css
+++ b/src/style.css
@@ -56,3 +56,14 @@ thead tr:before {
   background: url('/thead-line.png') no-repeat;
   background-size: 100%;
 }
+
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0)
+  }
+  100% {
+    transform:translate(-50%)
+  }
+}
+  
